--- a/Task2/app/templates/application.hbs
+++ b/Task2/app/templates/application.hbs
@@ -1,22 +1,45 @@
-<div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
-  <header class="masthead mb-auto">
-    <div class="inner">
-      <h3 class="masthead-brand">Cover</h3>
-      <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link active" href="#">Home</a>
-        <a class="nav-link" href="#">Features</a>
-        <a class="nav-link" href="#">Contact</a>
-      </nav>
-    </div>
-  </header>
-
-  <main role="main" class="inner cover text-center">
-    {{outlet}}
-  </main>
-
-  <footer class="mastfoot mt-auto">
-    <div class="inner">
-      <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-    </div>
-  </footer>
+<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+<a class="navbar-brand" href="index.html">
+	<img src="images/logo-dark.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+	Книжный клуб
+</a>
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Открыть меню">
+	<span class="navbar-toggler-icon"></span>
+</button>
+<div class="collapse navbar-collapse" id="navbarContent">
+	<ul class="nav navbar-nav navigation-main">
+		<li class="nav-item active">
+			<a class="nav-link" href="index.html">Рабочий стол <span class="sr-only">(текущий)</span></a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="meetings.html">Встречи клуба</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="books.html">Книги</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="speakers.html">Спикеры</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link text-success" href="#">Оставить заявку</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link text-primary" href="#">Запланировать</a>
+		</li>
+	</ul>
+	<ul class="nav navbar-nav">
+		<li class="nav-item">
+			<a class="nav-link text-info" href="register.html">Регистрация</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="login.html">Войти</a>
+		</li>
+	</ul>
 </div>
+</nav>
+{{outlet}}
+<footer class="footer">
+<div class="container">
+	<span>&copy; New Platform Ltd., 2022</span>
+</div>
+</footer>
